[package]
authors = ["Alex Whitney <adwhit@fastmail.com>"]
name = "json-schema"
version = "0.1.0"

[dependencies]
Inflector = "0.10"
error-chain = "0.10"
lazy_static = "0.2.8"
regex = "0.2"
serde = "1.0"
serde_codegen = "0.9"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"

[dependencies.simple-codegen]
path = "../simple-codegen"
